Avoid using Arrays.asList() and Collections.emptyList() in favor of List.of()