@@ -3,7 +3,6 @@ package com.cavetale.tutor.goal;
 import com.cavetale.core.event.player.PluginPlayerEvent.Detail;
 import com.cavetale.core.event.player.PluginPlayerEvent;
 import com.cavetale.tutor.session.PlayerQuest;
-import java.util.Arrays;
 import java.util.List;
 import lombok.Getter;
 import net.kyori.adventure.text.Component;
@@ -42,14 +41,14 @@ public final class BuyGoal implements Goal {
         condShopSearch.setBookPageIndex(1);
         condShopPort.setBookPageIndex(1);
         condBuyClaimBlocks.setBookPageIndex(2);
-        this.conditions = Arrays.asList(new Condition[] {
+        this.conditions = List.of(new Condition[] {
                 condMarket,
                 condShopSearch,
                 condShopPort,
                 condBuyClaimBlocks,
             });
-        this.constraints = Arrays.asList(new MainServerConstraint());
-        this.additionalBookPages = Arrays.asList(new Component[] {
+        this.constraints = List.of(new MainServerConstraint());
+        this.additionalBookPages = List.of(new Component[] {
                 TextComponent.ofChildren(new Component[] {// 0
                         Component.text("The market contains player created shops."
                                        + " Starting with the Member rank,"
