@@ -3,7 +3,6 @@ package com.cavetale.tutor.goal;
 import com.cavetale.core.event.player.PluginPlayerEvent.Detail;
 import com.cavetale.core.event.player.PluginPlayerEvent;
 import com.cavetale.tutor.session.PlayerQuest;
-import java.util.Arrays;
 import java.util.List;
 import lombok.Getter;
 import net.kyori.adventure.text.Component;
@@ -41,14 +40,14 @@ public final class StorageGoal implements Goal {
         condDiamonds.setBookPageIndex(0);
         condSearch.setBookPageIndex(1);
         condStash.setBookPageIndex(2);
-        this.conditions = Arrays.asList(new Condition[] {
+        this.conditions = List.of(new Condition[] {
                 condMs,
                 condDiamonds,
                 condSearch,
                 condStash,
             });
-        this.constraints = Arrays.asList(new MainServerConstraint());
-        this.additionalBookPages = Arrays.asList(new Component[] {
+        this.constraints = List.of(new MainServerConstraint());
+        this.additionalBookPages = List.of(new Component[] {
                 TextComponent.ofChildren(new Component[] {
                         Component.text("Mass Storage is an infinite store for simple items,"
                                        + " from cobblestone to diamonds."
